# weekly

./: CMakeLists.txt  customNodesCppExamplePlugin02.cpp  customNodesCppExamplePlugin02.h
0105/plugins/: CMakeLists.txt  customNodesCppExamplePlugin02.cpp  customNodesCppExamplePlugin02.h
1229/: test.txt
rsbg_recorder/: CMakeLists.txt  reference_project.rs-data-schema  rsbg-files-recorder.cpp  test2_input_header.hpp
